projects/elements/src/alert/alert.css
:host {
  --gap: var(--nve-ref-space-xs);
  --font-size: var(--nve-ref-font-size-200);
  --color: var(--nve-sys-text-color);
  --icon-color: var(--status-color);
  --icon-size: var(--nve-ref-size-400);
  --font-weight: var(--nve-ref-font-weight-semibold);
  width: auto;
}

[internal-host] {
  --_icon-cancel-color: var(--color);
}

slot,
[internal-host] {
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  gap: var(--gap);
  color: var(--color);
  display: flex;
  align-items: center;
  line-height: 1em;
  height: 100%;
}

slot {
  flex-wrap: wrap;
}

::slotted(nve-button[interaction='ghost']) {
  --color: inherit;
}

slot[name='actions'] {
  margin-left: auto;
}

nve-icon {
  --color: var(--icon-color);
}

nve-icon:not([size='sm']) {
  --width: var(--icon-size);
  --height: var(--icon-size);
}

nve-icon[size='sm'] {
  padding: 2px;
}

nve-icon-button:not([icon-name='cancel']) {
  --color: var(--icon-color);
  margin-left: auto;
}

nve-icon-button[interaction='ghost'] {
  --color: var(--_icon-cancel-color);
}

::slotted([nve-text]) {
  color: inherit !important;
}

:host([status='success']),
:host([status='danger']) {
  --color: var(--status-color);
}

